# alphastudio

./: .gitignore  README.md
.agents/: AGENTS.md
backend/: Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 082b60696c17_create_initial_schema.py  a1b2c3d4e5f6_add_user_id_to_source_documents.py
backend/app/: config.py  logging_config.py  main.py
backend/app/assistant/: agent.py  instructions.md
backend/app/auth/: dependencies.py
backend/app/chat/: orchestrator.py  streaming.py
backend/app/database/: connection.py  supabase.py
backend/app/database/models/: __init__.py  chat_message.py  chat_thread.py  constants.py  document_chunk.py  message_citation.py  source_document.py  user.py
backend/app/grounding/: validator.py
backend/app/ingest/: chunker.py  embedder.py  parser.py  pipeline.py  upload_service.py
backend/app/retrieval/: fusion.py  queries.py  retriever.py
backend/app/routers/: chat.py
backend/app/schemas/: chat.py
data/: download.py
data/downloads/: manifest.json
docs/: todos.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatWindow.tsx  ProtectedRoute.tsx  SourcePassagePanel.tsx
frontend/src/lib/: api.ts  env.ts  http.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Signup.tsx
