[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "cohere>=7.0.4",
    "fastapi>=0.138.1",
    "groq>=1.5.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-ai>=2.0.0",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: integration tests"
]

